Add better java settings for zookeeper